task2/yamls/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rickmorty-service
spec:
  selector:
    app: rickmorty
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
